--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="bg-gray-200">
+<body class="bg-gray-400">
     <div class="flex">
         <!-- SIDE NAV BAR -->
         <div id="nav" class=" bg-indigo-900 w-64 h-screen">
@@ -130,7 +130,7 @@
                     <span class="text-xl font-bold tracking-tight">Amangoua Ange-Thierry</span>
                 </div>
                 <div class="right">
-                   <div class="flex justify-around space-x-7">
+                   <div class="lg:flex justify-around space-x-7 hidden">
                    
                     <a href="#">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-gray-400">
@@ -154,6 +154,13 @@
                       <a href="#" class="text-indigo-500 font-semibold text-base">Logout</a>
                    </div>
                 </div>
+            </div>
+
+            <!-- SITE BANNER -->
+
+            <div class="bg-indigo-100 font-semibold lg:text-5xl md:text-3xl text-2xl p-8 m-5">
+                Good morning, Super Inc.👋<br>
+                <span class="text-lg font-normal text-gray-800 tracking-tight">Here is what's happening with your projects today:</span>
             </div>
         </div>
     </div>
