--- a/public/index.html
+++ b/public/index.html
@@ -138,7 +138,7 @@
 
         <!-- MAIN CONTENT AREA -->
         <div class="flex-1 ">
-            <div class="bg-white px-2 py-0.5 h-16 flex justify-between items-center">
+            <div class="bg-white px-5 py-0.5 h-16 flex justify-between items-center">
                 <!-- TOP NAV BAR -->
                 <div class="left flex items-center space-x-5 py-3">
                     <!-- LEFT SECTION -->
@@ -173,7 +173,6 @@
                             </svg>
                         </a>
 
-
                         <a href="#" class="text-indigo-500 font-semibold text-base">Logout</a>
                     </div>
                 </div>
@@ -188,13 +187,32 @@
             </div>
 
             <!-- CARD CONTAINER -->
-            <div class="block lg:flex my-10 mx-7 justify-center lg:space-x-10 space-x-0 lg:space-y-0 space-y-5">
-                <div class="bg-indigo-100 h-96 w-full lg:w-1/2 shadow-2xl rounded">
-                        Amangoua
+            <div class="card-container block lg:flex my-10 mx-7 justify-center lg:space-x-7 space-x-0 lg:space-y-0 space-y-5">
+                <div class="card bg-indigo-100 w-full lg:w-1/2 shadow-2xl rounded p-4">
+                       <div><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="w-14 h-14">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M19.5 12c0-1.232-.046-2.453-.138-3.662a4.006 4.006 0 00-3.7-3.7 48.678 48.678 0 00-7.324 0 4.006 4.006 0 00-3.7 3.7c-.017.22-.032.441-.046.662M19.5 12l3-3m-3 3l-3-3m-12 3c0 1.232.046 2.453.138 3.662a4.006 4.006 0 003.7 3.7 48.656 48.656 0 007.324 0 4.006 4.006 0 003.7-3.7c.017-.22.032-.441.046-.662M4.5 12l3 3m-3-3l-3 3" />
+                    </svg>
+                    <div class="font-bold text-2xl tracking-tight text-gray-700">super pro</div>
+                    <p class="uppercace mt-1 mb-1 font-bold text-base text-gray-400">SALES</p>
+                    <span class="font-bold text-2xl text-black">$24,676</span>
+                    <span class="font-semibold text-base bg-green-700 text-white rounded-xl p-1">+58%</span>
+
+                </div>
                 </div>
 
-                <div class="bg-indigo-100 h-96  w-full lg:w-1/2 shadow-2xl rounded">
-
+                <div class="card bg-indigo-100  w-full lg:w-1/2 shadow-2xl rounded p-4">
+                       <div><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="w-14 h-14">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M19.5 12c0-1.232-.046-2.453-.138-3.662a4.006 4.006 0 00-3.7-3.7 48.678 48.678 0 00-7.324 0 4.006 4.006 0 00-3.7 3.7c-.017.22-.032.441-.046.662M19.5 12l3-3m-3 3l-3-3m-12 3c0 1.232.046 2.453.138 3.662a4.006 4.006 0 003.7 3.7 48.656 48.656 0 007.324 0 4.006 4.006 0 003.7-3.7c.017-.22.032-.441.046-.662M4.5 12l3 3m-3-3l-3 3" />
+                    </svg>
+                
+                    <div class="font-bold text-2xl tracking-tight text-gray-700">super plus</div>
+                    <p class="uppercace mt-1 mb-1 font-bold text-base text-gray-400">SALES</p>
+                    <span class="font-bold text-2xl text-black">$25,676</span>
+                    <span class="font-semibold text-base bg-red-500 text-white rounded-xl p-1">+58%</span></div>
                 </div>
 
             </div>
